--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,6 +121,33 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
+  {emoji:'⛳', pl:'Pole Golfowe', en:'Golf Course', others:['golf corse', 'golf field', 'pole golfowe']},
+  {emoji:'🎯', pl:'Tarcza', en:'Dartboard', others:['dart bord', 'target board', 'tarcza']},
+  {emoji:'🏹', pl:'Łuk', en:'Bow', others:['boww', 'archery bow', 'luk']},
+  {emoji:'🪃', pl:'Bumerang', en:'Boomerang', others:['bommerang', 'throwing stick', 'bumerang']},
+  {emoji:'🪁', pl:'Latawiec', en:'Kite', others:['kight', 'flying kite', 'latawiec']},
+  {emoji:'🎣', pl:'Wędka', en:'Fishing Rod', others:['fishingrod', 'angler rod', 'wedka']},
+  {emoji:'🤿', pl:'Maska do Nurkowania', en:'Diving Mask', others:['divin mask', 'snorkel mask', 'okulary do pływania']},
+  {emoji:'🥋', pl:'Strój Karate', en:'Karate Uniform', others:['karatte uniform', 'martial arts gi', 'stroj karate']},
+  {emoji:'🥊', pl:'Rękawica Bokserska', en:'Boxing Glove', others:['boxin glove', 'boxing mitt', 'rekawica bokserska']},
+  {emoji:'🎱', pl:'Bilard', en:'Billiards', others:['bilards', 'pool ball', 'bilard']},
+  {emoji:'🎮', pl:'Pad', en:'Game Controller', others:['game controlller', 'gaming pad', 'pad']},
+  {emoji:'🔫', pl:'Pistolet na Wodę', en:'Water Gun', others:['watergn', 'squirt gun', 'pistolet na wode']},
+  {emoji:'🎲', pl:'Kostka', en:'Dice', others:['dise', 'game dice', 'kostka']},
+  {emoji:'🃏', pl:'Karta', en:'Card', others:['playin card', 'joker card', 'karta', 'Playing Card']},
+  {emoji:'🪄', pl:'Różdżka', en:'Wand', others:['magic wond', 'Magic Wand', 'rozdzka']},
+  {emoji:'🎩', pl:'Cylinder', en:'Top Hat', others:['top hatt', 'gentleman hat', 'kapelusz']},
+  {emoji:'🖼️', pl:'Obraz', en:'Framed Picture', others:['frame picture', 'framed art', 'obraz', 'picture']},
+  {emoji:'🎨', pl:'Paleta', en:'Artist Palette', others:['art pallete', 'paint palette', 'paleta', 'palette']},
+  {emoji:'🖌️', pl:'Pędzel', en:'Paintbrush', others:['paint brus', 'art brush', 'pedzel']},
+  {emoji:'🖍️', pl:'Kredka', en:'Crayon', others:['crayon', 'wax crayon', 'kredkaa']},
+  {emoji:'🪡', pl:'Igła', en:'Needle', others:['nedle', 'sewing needle', 'igla']},
+  {emoji:'🧵', pl:'Nitka', en:'Thread', others:['thred', 'sewing thread', 'nitka']},
+  {emoji:'🧶', pl:'Wełna', en:'Yarn', others:['yarnn', 'wool yarn', 'welna']},
+  {emoji:'🪀', pl:'Jojo', en:'Yo-Yo', others:['yo yo', 'yo-yo toy', 'jojo', 'yoyo']},
+  {emoji:'🕹️', pl:'Dżojstik', en:'Joystick', others:['joy stik', 'game joystick', 'dzojstik']}
+     ],
+     medium:[
   {emoji:'🎀', pl:'Kokarda', en:'Bow', others:['boow', 'ribbon bow', 'kokarda']},
   {emoji:'🎇', pl:'Fajerwerki', en:'Fireworks', others:['firewroks', 'sparklers', 'fajerwerki']},
   {emoji:'🧨', pl:'Dynamit', en:'Firecracker', others:['firecracer', 'dynamite', 'dynamit']},
@@ -132,9 +159,18 @@
   {emoji:'🛷', pl:'Sanki', en:'Sled', others:['sledd', 'snow sled', 'sanki']},
   {emoji:'🛤️', pl:'Tory Kolejowe', en:'Railway Track', others:['railwai track', 'train track', 'tory kolejowe']},
   {emoji:'🛖', pl:'Schronisko Górskie', en:'Mountain Shelter', others:['huttt', 'mountain shelter', 'schronisko gorskie', 'hut']},
+  {emoji:'🏈', pl:'Futbol Amerykański', en:'American Football', others:['americn football', 'football ball', 'futbol amerykanski']},
   {emoji:'🏚️', pl:'Zrójnowany Budynek', en:'Derelict House', others:['derelic house', 'ruined building', 'zrojnowany budynek']}
      ],
-     medium:[
+     hard:[
+  {emoji:'📷', pl:'Aparat', en:'Camera', others:['cammera', 'photo camera', 'aparat']},
+  {emoji:'🏓', pl:'Tenis Stołowy', en:'Table Tennis', others:['table tenns', 'ping pong', 'tenis stolowy']},
+  {emoji:'🎳', pl:'Kręgle', en:'Bowling', others:['bowlling', 'bowling game', 'kregle']},
+  {emoji:'♟️', pl:'Szachy', en:'Chess', others:['chesss', 'chess piece', 'szachy']},
+  {emoji:'🧩', pl:'Puzzle', en:'Puzzle', others:['puzle', 'jigsaw puzzle', 'puzel']},
+  {emoji:'🩱', pl:'Strój Kąpielowy', en:'Swimsuit', others:['swimmsuit', 'bathing suit', 'stroj kapielowy']},
+  {emoji:'🥏', pl:'Frisbee', en:'Frisbee', others:['frizbee', 'flying disc', 'frisbi']},
+  {emoji:'🛹', pl:'Deskorolka', en:'Skateboard', others:['skatebord', 'skating board', 'deskorolka']},
   {emoji:'🎈', pl:'Balon', en:'Balloon', others:['ballon', 'party balloon', 'balon']},
   {emoji:'🎁', pl:'Prezent', en:'Gift', others:['gft', 'present box', 'prezent']},
   {emoji:'🥇', pl:'Złoty Medal', en:'Gold Medal', others:['gold madal', '1st place medal', 'zloty medal']},
@@ -144,10 +180,9 @@
   {emoji:'🏆', pl:'Puchar', en:'Trophy', others:['trofhy', 'championship cup', 'puchar', 'cup']},
   {emoji:'⚽', pl:'Piłka Nożna', en:'Soccer Ball', others:['socer ball', 'football', 'pilka nozna']},
   {emoji:'⚾', pl:'Baseball', en:'Baseball', others:['baseboll', 'baseball ball', 'bejsbol']},
-  {emoji:'🥎', pl:'Softball', en:'Softball', others:['softboll', 'softball ball', 'softbal']},
+  {emoji:'🥎', pl:'Softball', en:'Softball', others:['softboll', 'softball ball', 'softbal', 'tennis', 'tenis']},
   {emoji:'🏀', pl:'Koszykówka', en:'Basketball', others:['basketbal', 'basketball ball', 'koszykowka']},
   {emoji:'🏐', pl:'Siatkówka', en:'Volleyball', others:['volleybal', 'volley ball', 'siatkowka']},
-  {emoji:'🏈', pl:'Futbol Amerykański', en:'American Football', others:['americn football', 'football ball', 'futbol amerykanski']},
   {emoji:'🏉', pl:'Rugby', en:'Rugby', others:['rugbi', 'rugby ball', 'rugbi']},
   {emoji:'🎾', pl:'Tenis', en:'Tennis', others:['tennis', 'tennis ball', 'tenis']},
   {emoji:'🏸', pl:'Badminton', en:'Badminton', others:['badmiton', 'shuttle game', 'badminton']},
@@ -155,7 +190,6 @@
   {emoji:'🏏', pl:'Krykiet', en:'Cricket', others:['criket', 'cricket game', 'krykiet']},
   {emoji:'🏑', pl:'Hokej na Trawie', en:'Field Hockey', others:['feeld hockey', 'grass hockey', 'hokej na trawie']},
   {emoji:'🏒', pl:'Hokej na Lodzie', en:'Ice Hockey', others:['ice hocky', 'hockey on ice', 'hokej na lodzie']},
-  {emoji:'🥌', pl:'Curling', en:'Curling', others:['curlling', 'curling stone', 'curling']},
   {emoji:'🎿', pl:'Narty', en:'Skis', others:['skies', 'skiing', 'narty']},
   {emoji:'⛸️', pl:'Łyżwy', en:'Ice Skates', others:['ice skatess', 'skating shoes', 'lyzwy']},
   {emoji:'🛼', pl:'Rolki', en:'Roller Skates', others:['roler skates', 'inline skates', 'rolki']},
@@ -176,9 +210,8 @@
   {emoji:'🛣️', pl:'Droga', en:'Motorway', others:['motorwai', 'highway', 'droga', 'way']},
   {emoji:'🗺️', pl:'Mapa', en:'Map', others:['mapp', 'world map', 'mapa']},
   {emoji:'💺', pl:'Siedzenie', en:'Seat', others:['seet', 'chair', 'siedzenie']},
-  {emoji:'🧳', pl:'Walizka', en:'Luggage', others:['lugage', 'suitcase', 'walizka']}
-     ],
-     hard:[
+  {emoji:'🥌', pl:'Curling', en:'Curling', others:['curlling', 'curling stone', 'curling']},
+  {emoji:'🧳', pl:'Walizka', en:'Luggage', others:['lugage', 'suitcase', 'walizka']},
   {emoji:'⛵', pl:'Żaglówka', en:'Sailboat', others:['sailbote', 'sailing boat', 'zaglówka']},
   {emoji:'🛶', pl:'Kajak', en:'Canoe', others:['canoo', 'kayak', 'kajak']},
   {emoji:'🛫', pl:'Wylot', en:'Departure', others:['deparure', 'take off', 'wylot']},
