--- a/testy.html
+++ b/testy.html
@@ -155,6 +155,222 @@
      */
     const easy = [
         {
+            pytanie: 'Co definiuje w języku C++ przedstawiony fragment kodu?',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756662157/pytanie31_xn8erf.png',
+            poprawna_odpowiedz: 'Typ strukturalny składający się z trzech pól',
+            bledne_odpowiedzi: ['Hierarchię zmiennych', 'Trzy zmienne niepowiązane ze sobą', 'Kontakt pomiędzy zmiennymi globalnymi i lokalnymi']
+        },
+        {
+            pytanie: 'Sposób programowania, w którym ciąg poleceń (sekwencji instrukcji) przekazywanych komputerowi jest postrzegany jako program, nosi nazwę programowania',
+            poprawna_odpowiedz: 'imperatywnego',
+            bledne_odpowiedzi: ['stanowego', 'logicznego', 'funkcyjnego']
+        },
+        {
+            pytanie: 'Które wartości będą kolejno wypisane w wyniku działania przedstawionego skryptu',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756662293/pytanie33_z3hiia.png',
+            poprawna_odpowiedz: '2 2 1',
+            bledne_odpowiedzi: ['2 1 1', '1 2 1', '1 2 2']
+        },
+        {
+            pytanie: 'Fragment kodu prezentuje składnię języka',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756662442/pytanie34_actpnf.png',
+            poprawna_odpowiedz: 'PHP',
+            bledne_odpowiedzi: ['C', 'C#', 'JavaScript']
+        },
+        {
+            pytanie: 'Jaki program  komputerowy przekształca kod źródłowy, napisany w konkretnym języku programowania, na język  komputera?',
+            poprawna_odpowiedz: 'Kompilator',
+            bledne_odpowiedzi: ['Debugger', 'Edytor kodu źródłowego', 'Środowisko programistyczne']
+        },
+        {
+            pytanie: 'Jak nazywa się program, który wykonuje instrukcje zawarte w kodzie źródłowym tworzonego programu bez uprzedniego generowania programu wynikowego?',
+            poprawna_odpowiedz: 'Interpreter',
+            bledne_odpowiedzi: ['Kompilator', 'Konwerter kodu', 'Konwerter języka']
+        },
+        {
+            pytanie: 'Który język skryptowy ogólnego przeznaczenia należy wykorzystać do tworzenia aplikacji WWW, zagnieżdżanych w języku HTML i uruchamianych po stronie serwera?',
+            poprawna_odpowiedz: 'PHP',
+            bledne_odpowiedzi: ['C#', 'Perl', 'JavaScript']
+        },
+        {
+            pytanie: 'Jak nazywa się technika umożliwiająca otwarcie połączenia klienta z serwerem i komunikację bez przeładowywania całej strony WWW w sposób asynchroniczny ?',
+            poprawna_odpowiedz: 'AJAX',
+            bledne_odpowiedzi: ['PHP', 'XML', 'VBScript']
+        },
+        {
+            pytanie: 'Jak nazywa się element oznaczony znakiem zapytania w strukturze platformy .NET, który umożliwia tworzenie własnych aplikacji z użyciem frameworków i zamianę kompilowanego kodu pośredniego na kod maszynowy procesora zainstalowanego w komputerze?',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756662670/pytanie39_gaslcb.png',
+            poprawna_odpowiedz: 'Wspólne środowisko uruchomieniowe (CLR)',
+            bledne_odpowiedzi: ['Infrastruktura językowa (CLI)', 'Biblioteka klas bazowych (BCL)', 'Wspólne środowisko programistyczne (CLP)']
+        },
+        {
+            pytanie: 'Jakiego rodzaju mechanizm kontroli bezpieczeństwa wykonywania aplikacji zawiera środowisko uruchomieniowe platformy .NET Framework?',
+            poprawna_odpowiedz: 'Mechanizm wykonywania aplikacji oparty na uprawnieniach kodu (CAS - Code Access Security) i na rolach (RBS - Role-Based Security)',
+            bledne_odpowiedzi: ['Mechanizm wykonywania aplikacji dla bibliotek klas', 'Mechanizm wykonywania aplikacji realizowany przez frameworki aplikacji internetowych (ASP.NET)', 'Mechanizm wykonywania aplikacji realizowany przez funkcję Windows API (Application Programming Interface)']
+        },
+        {
+            pytanie: 'Co to jest DBMS?',
+            poprawna_odpowiedz: 'System zarządzania bazą danych',
+            bledne_odpowiedzi: ['Strukturalny język zapytań kierowanych do bazy danych', 'Obiektowy język programowania do generowania stron www', 'Kaskadowy arkusz stylów do opisu wyglądu strony www']
+        },
+        {
+            pytanie: 'Który z odsyłaczy posiada poprawną konstrukcję?',
+            poprawna_odpowiedz: '<a href="mailto:adres"> tekst </a>',
+            bledne_odpowiedzi: ['<a href=`mailto:adres`> tekst </a>', '<a href=`http://adres`> tekst </a>', '<a href="http://adres"> tekst <a>']
+        },
+        {
+            pytanie: 'Fragment kodu napisany w języku HTML zamieszczony w ramce przedstawia listę',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756662951/pytanie43_m6jr05.png',
+            poprawna_odpowiedz: 'numerowaną',
+            bledne_odpowiedzi: ['wypunktowaną', 'odnośników', 'skrótów']
+        },
+        {
+            pytanie: 'Polecenie colspan służy do łączenia komórek tabeli w poziomie, natomiast rowspan w pionie. Którą z tabel wyświetli fragment kodu napisany w języku HTML?',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756663022/pytanie44_lvnnxs.png',
+            poprawna_odpowiedz: 'B',
+            bledne_odpowiedzi: ['A', 'C', 'D']
+        },
+        {
+            pytanie: 'W znaczniku <head> (w części <meta>) strony www NIE umieszcza się informacji dotyczącej',
+            poprawna_odpowiedz: 'typu dokumentu',
+            bledne_odpowiedzi: ['autora', 'kodowania', 'automatycznego odświeżania']
+        },
+        {
+            pytanie: 'Wskaż sposób, w jaki należy odwołać się do pliku default.css, jeśli index.html znajduje się bezpośrednio w katalogu Strona?',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756663154/pytanie46_gso4op.png',
+            poprawna_odpowiedz: '<link rel="stylesheet" type="text/css" href="./style/default.css" />',
+            bledne_odpowiedzi: ['<link rel="stylesheet" type="text/css" href="C:/style/default.css" />', '<link rel="stylesheet" type="text/css" href="...styledefault.css" />', '<link rel="stylesheet" type="text/css" href="c:style/default.css" />']
+        },
+        {
+            pytanie: 'Wskaż stwierdzenie, które jest prawdziwe dla następującej definicji stylu:',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756663223/pytanie47_gsmbb9.png',
+            poprawna_odpowiedz: 'Zdefiniowano dwie klasy',
+            bledne_odpowiedzi: ['Jest to styl lokalny', 'Akapit będzie transponowany na małe litery', 'Odnośnik będzie pisany czcionką 14 punktów']
+        },
+        {
+            pytanie: 'W palecie kolorów RGB kolor żółty jest połączeniem dwóch kolorów: zielonego i czerwonego. Który z kodów szesnastkowych oznacza kolor żółty?',
+            poprawna_odpowiedz: '#FFFF00',
+            bledne_odpowiedzi: ['#FF00FF', '#00FFFF', '#F0F0F0']
+        },
+        {
+            pytanie: 'Który z formatów NIE pozwala na zapis plików animowanych?',
+            poprawna_odpowiedz: 'ACE',
+            bledne_odpowiedzi: ['GIF', 'SWF', 'SVG']
+        },
+        {
+            pytanie: 'Który z formatów graficznych pozwala na zapis przejrzystego tła?',
+            poprawna_odpowiedz: 'GIF',
+            bledne_odpowiedzi: ['RAW', 'BMP', 'JPEG']
+        },
+        {
+            pytanie: 'Proces walidacji strony internetowej to',
+            poprawna_odpowiedz: 'sprawdzenie jej w celu wyeliminowania błędów',
+            bledne_odpowiedzi: ['zespół działań mających na celu zwiększenie oglądalności', 'publikowanie w sieci', 'promocja strony']
+        },
+        {
+            pytanie: 'Które oprogramowanie NIE JEST systemem zarządzania treścią (CMS)?',
+            poprawna_odpowiedz: 'Apache',
+            bledne_odpowiedzi: ['Joomla', 'Mambo', 'WordPress']
+        },
+        {
+            pytanie: 'Który z formatów zapewnia największa redukcję rozmiaru pliku dźwiękowego?',
+            poprawna_odpowiedz: 'MP3',
+            bledne_odpowiedzi: ['WAV', 'PCM', 'CD-Audio']
+        },
+        {
+            pytanie: 'Wskaż prawidłową kolejność tworzenia bazy danych',
+            poprawna_odpowiedz: 'Określenie celu, stworzenie tabel, utworzenie relacji, normalizacja',
+            bledne_odpowiedzi: ['Określenie celu, utworzenie relacji, stworzenie tabel, normalizacja', 'Określenie celu, normalizacja, utworzenie relacji, stworzenie tabel', 'Określenie celu, normalizacja, stworzenie tabel, utworzenie relacji']
+        },
+        {
+            pytanie: 'Wskaż typ relacji pomiędzy tabelami: Tabela1 i Tabela3',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756663530/pytanie55_uppn0a.png',
+            poprawna_odpowiedz: 'Wiele do wielu',
+            bledne_odpowiedzi: ['Jeden do jednego', 'Wiele do jednego', 'Jeden do wielu']
+        },
+        {
+            pytanie: 'Które z pól są umieszczone w formularzu?',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756663646/pytanie56_sbwska.png',
+            poprawna_odpowiedz: 'Input(Text), Select, Input(Radio), Input(Radio), Input(Submit), Input(Reset)',
+            bledne_odpowiedzi: ['Textarea, Option, Input(Chechbox), Input(Checkbox), Input(Submit) Input(Reset)', 'Textarea, Select, Input(Radio), Input(Radio), Input(Reset), Input(Submit)', 'Input(Text), Input(Chechbox), Select, Select, Input(Submit), Input(Reset)']
+        },
+        {
+            pytanie: 'Którą z właściwości pola tabeli należy zdefiniować, aby pole przyjmowało dane składające się wyłącznie z cyfr?',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756663719/pytanie57_vuijhu.png',
+            poprawna_odpowiedz: 'Maskę wprowadzania',
+            bledne_odpowiedzi: ['Tagi inteligentne', 'Wartość domyślną', 'Regułę sprawdzania poprawności']
+        },
+        {
+            pytanie: 'Którego ze słów kluczowych języka SQL należy użyć, aby wyeliminować duplikaty?',
+            poprawna_odpowiedz: 'DISTINCT',
+            bledne_odpowiedzi: ['LIKE', 'ORDER BY', 'GROUP BY']
+        },
+        {
+            pytanie: 'Które ze stwierdzeń prawidłowo charakteryzuje zdefiniowaną tabelę: CREATE TABLE dane (kolumna INTEGER(3));',
+            poprawna_odpowiedz: 'Tabela o nazwie posiada jedną kolumnę liczb całkowitych',
+            bledne_odpowiedzi: ['Tabela o nazwie posiada trzy kolumny liczb całkowitych', 'Tabela posiada jedną kolumnę zawierającą trzy elementowe tablice', 'Kolumny tabeli nazywają się: , ,']
+        },
+        {
+            pytanie: 'Polecenie REVOKE SELECT ON nazwa1 FROM nazwa2 w języku SQL umożliwia',
+            poprawna_odpowiedz: 'odbieranie uprawnień użytkownikowi',
+            bledne_odpowiedzi: ['nadanie uprawnień z użyciem zdefiniowanego schematu', 'usuwanie użytkownika z bazy', 'nadawanie praw do tabeli']
+        },
+        {
+            pytanie: 'Które polecenie wydane z konsoli systemu operacyjnego, zawierające w swojej składni opcję --repair, umożliwia naprawę bazy danych?',
+            poprawna_odpowiedz: 'mysqlcheck',
+            bledne_odpowiedzi: ['mysqldump', 'truncate', 'create']
+        },
+        {
+            pytanie: 'Które polecenie wydane z konsoli systemowej dokona przywrócenia bazy danych?',
+            poprawna_odpowiedz: 'mysql -u root -p baza < kopia.sql',
+            bledne_odpowiedzi: ['mysqldump -u root -p baza > kopia.sql', 'mysqldump -u root -p baza < kopia.sql', 'mysql -u root -p baza > kopia.sql']
+        },
+        {
+            pytanie: 'Polecenie w języku SQL GRANT ALL PRIVILEGES ON klienci TO pracownik',
+            poprawna_odpowiedz: 'nadaje wszystkie uprawnienia do tabeli użytkownikowi',
+            bledne_odpowiedzi: ['nadaje uprawnienie grupie do tabeli', 'odbiera wszystkie uprawnienia do tabeli', 'skopiuje uprawnienia z grupy na użytkownika']
+        },
+        {
+            pytanie: 'Która z wymienionych funkcji sortowania wykorzystywana w języku PHP sortuje tablicę asocjacyjną według indeksów',
+            poprawna_odpowiedz: 'ksort()',
+            bledne_odpowiedzi: ['sort()', 'rsort()', 'asort()']
+        },
+        {
+            pytanie: 'W skrypcie PHP należy utworzyć cookie o nazwie owoce które przyjmie wartość jabłko. Cookie ma być dostępne przez jedną godzinę od jego utworzenia. W tym celu należy w skrypcie PHP użyć funkcji:',
+            poprawna_odpowiedz: 'setcookie("owoce","jabłko",time()+3600);',
+            bledne_odpowiedzi: ['cookie("owoce","jabłko",3600);', 'cookie("jabłko","owoce",3600);', 'setcookie("jabłko","owoce",time()+3600);']
+        },
+        {
+            pytanie: 'Wskaż słowo kluczowe w języku C++ dodawane przed wbudowanym typem danych, które przesuwa zakres liczby wyłącznie nieujemne',
+            poprawna_odpowiedz: 'unsigned',
+            bledne_odpowiedzi: ['long', 'const', 'short']
+        },
+        {
+            pytanie: 'W językach programowania tylko zmienna jednego typu wbudowanego może przyjmować wyłącznie dwie wartości. Jest to typ',
+            poprawna_odpowiedz: 'logiczny',
+            bledne_odpowiedzi: ['znakowy', 'tablicowy', 'łańcuchowy']
+        },
+        {
+            pytanie: 'Instrukcja języka PHP tworząca obiekt pkt dla zdefiniowanej w ramce klasy ma postać',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756664042/pytanie68_mgfr4l.png',
+            poprawna_odpowiedz: 'pkt = new Punkt();',
+            bledne_odpowiedzi: ['pkt Punkt;', 'pkt Punkt();', 'Punkt() pkt;']
+        },
+        {
+            pytanie: 'Wskaż wynik wykonania skryptu napisanego w języku PHP',
+            zdjecie: 'https://res.cloudinary.com/diljpkw9f/image/upload/v1756664112/pytanie69_emkuhh.png',
+            poprawna_odpowiedz: 'A',
+            bledne_odpowiedzi: ['B', 'C', 'D']
+        },
+        {
+            pytanie: 'Które ze stwierdzeń dotyczących języków programowania NIE jest prawdziwe',
+            poprawna_odpowiedz: 'SQL jest językiem programowania strukturalnego',
+            bledne_odpowiedzi: ['C++ jest językiem obiektowym', 'JavaScript jest językiem skryptowym', 'PHP jest językiem do tworzenia stron w czasie rzeczywistym']
+        },
+    ];
+
+    const medium = [
+        {
             pytanie: 'Którego polecenia nalezy użyć, aby wyraz TEKST został wyświetleny w kolorze czarnym w oknie przeglądarki internetowej?',
             poprawna_odpowiedz: '<font color="#000000"> TEKST </font>',
             bledne_odpowiedzi: ['<body color="black"> TEKST </font>', '<font color="czarny"> TEKST </font>', '<body bgcolor="black"> TEKST </body>']
@@ -309,20 +525,6 @@
         }
     ];
 
-    const medium = [
-      {
-        pytanie: 'Którego polecenia nalezy użyć, aby wyraz TEKST został wyświetlony w kolorze czarnym w oknie przeglądarki internetowej?',
-        poprawna_odpowiedz: '<font color="#000000"> TEKST </font>',
-        bledne_odpowiedzi: ['<body color="black"> TEKST </font>', '<font color="czarny"> TEKST </font>', '<body bgcolor="black"> TEKST </body>']
-      },
-      {
-        pytanie: 'Jak posortowana będzie lista, utworzona ze wszystkich kolumn tabeli uczniowie i zawierająca uczniów ze średnią większą od 5, która zostanie zwrócona jako wynik przedstawionego zapytania?',
-        kod: 'SELECT *\n    FROM uczniowie\n    WHERE srednia > 5\n    ORDER BY klasa DESC;',
-        poprawna_odpowiedz: 'Malejąco według parametru klasa',
-        bledne_odpowiedzi: ['Rosnąca według parametru klasa','Rosnaco według parametru srednia','Malejąco według parametru srednia']
-      },
-    ];
-
     const hard = [
       {
         pytanie: 'W poleceniach, których celem jest odtwarzanie na stronie internetowej dźwięku jako podkładu muzycznego NIE wykorzystuje się atrybutu',
@@ -334,6 +536,17 @@
         zdjecie: 'pytanie4.png', // opcjonalny plik – jeśli brak, pokaże się alt
         poprawna_odpowiedz: 'Administratorzy systemu bazy danych',
         bledne_odpowiedzi: ['Projektanci narzędzi deweloperskich','Administratorzy serwerów i sieci komputerowych','Projektanci i programiści Systemu Zarządzania Bazą Danych']
+      },
+      {
+        pytanie: 'Którego polecenia nalezy użyć, aby wyraz TEKST został wyświetlony w kolorze czarnym w oknie przeglądarki internetowej?',
+        poprawna_odpowiedz: '<font color="#000000"> TEKST </font>',
+        bledne_odpowiedzi: ['<body color="black"> TEKST </font>', '<font color="czarny"> TEKST </font>', '<body bgcolor="black"> TEKST </body>']
+      },
+      {
+        pytanie: 'Jak posortowana będzie lista, utworzona ze wszystkich kolumn tabeli uczniowie i zawierająca uczniów ze średnią większą od 5, która zostanie zwrócona jako wynik przedstawionego zapytania?',
+        kod: 'SELECT *\n    FROM uczniowie\n    WHERE srednia > 5\n    ORDER BY klasa DESC;',
+        poprawna_odpowiedz: 'Malejąco według parametru klasa',
+        bledne_odpowiedzi: ['Rosnąca według parametru klasa','Rosnaco według parametru srednia','Malejąco według parametru srednia']
       }
     ];
 
@@ -344,7 +557,7 @@
     let idx = 0;    // indeks aktualnego pytania
 
     // Timer dla trudnych pytań (start przy pierwszym trudnym)
-    const HARD_SECONDS = 5*60; // 5 minut
+    const HARD_SECONDS = 20*60; // 5 minut
     let hardStarted = false;
     let remaining = HARD_SECONDS;
     let timerId = null;
@@ -482,10 +695,15 @@
       }
 
       // przejście dalej po krótkiej pauzie
+      const delay = isCorrect ? 500 : 5000;
       setTimeout(()=>{
-        if(lives <= 0){ endGame('Koniec gry – brak żyć.'); return; }
-        idx += 1; renderCurrent();
-      }, 2000);
+        if(lives <= 0){
+          endGame('Koniec gry – brak żyć.');
+          return;
+        }
+        idx += 1;
+        renderCurrent();
+      }, delay);
     }
 
     function endGame(reason){
