--- a/mediumemotik.html
+++ b/mediumemotik.html
@@ -121,23 +121,49 @@
     // Każdy obiekt ma pola: emoji, pl (główna polska), en (główna angielska), others (tablica dodatkowych poprawnych słów)
     const EMOJI_BANK = {
      easy: [
-  {emoji:'⛳', pl:'Pole Golfowe', en:'Golf Course', others:['golf corse', 'golf field', 'pole golfowe']},
+  {emoji:'🎹', pl:'Pianino', en:'Piano', others:['Keyboard', 'Grand Piano', 'Pianino']},
+  {emoji:'🎷', pl:'Saksofon', en:'Saxophone', others:['Sax', 'Jazz Horn', 'Saksofon']},
+  {emoji:'🎺', pl:'Trąbka', en:'Trumpet', others:['Horn', 'Brass Trumpet', 'Trabka']},
+  {emoji:'🎸', pl:'Gitara', en:'Guitar', others:['Acoustic Guitar', 'Electric Guitar', 'Gitara']},
+  {emoji:'🪕', pl:'Banjo', en:'Banjo', others:['String Instrument', 'Bluegrass Banjo', 'Banjo']},
+  {emoji:'🎻', pl:'Skrzypce', en:'Violin', others:['Fiddle', 'String Violin', 'Skrzypce']},
+  {emoji:'🪘', pl:'Bęben', en:'Drum', others:['Hand Drum', 'Percussion Drum', 'Beben']},
+  {emoji:'🥁', pl:'Perkusja', en:'Drum Set', others:['Percussion', 'Drums', 'Perkusja']},
+  {emoji:'🪗', pl:'Akordeon', en:'Accordion', others:['Concertina', 'Piano Accordion', 'Akordeon']},
+  {emoji:'🎚️', pl:'Suwak Głośności', en:'Volume Slider', others:['Sound Fader', 'Audio Slider', 'Suwak Glosnosci']},
+  {emoji:'🎛️', pl:'Pokrętła Regulacyjne', en:'Control Knobs', others:['Sound Knobs', 'Audio Controls', 'Pokretla']},
+  {emoji:'🎙️', pl:'Mikrofon Studyjny', en:'Studio Microphone', others:['Recording Mic', 'Podcast Microphone', 'Mikrofon Studyjny']},
+  {emoji:'📺', pl:'Telewizor', en:'Television', others:['TV', 'Screen', 'Telewizor']},
+  {emoji:'📼', pl:'Kaseta', en:'Cassette', others:['VHS Tape', 'Video Cassette', 'Kaseta']},
+  {emoji:'🎬', pl:'Klaps Filmowy', en:'Clapperboard', others:['Movie Board', 'Film Slate', 'Klaps Filmowy']},
+  {emoji:'🎭', pl:'Maski Teatralne', en:'Theater Masks', others:['Drama Masks', 'Comedy and Tragedy', 'Maski Teatralne']},
+  {emoji:'🎫', pl:'Bilet', en:'Ticket', others:['Event Ticket', 'Admission Pass', 'Bilet']},
+     ],
+     medium:[
+  {emoji:'🖼️', pl:'Obraz', en:'Framed Picture', others:['frame picture', 'framed art', 'obraz', 'picture']},
+  {emoji:'📢', pl:'Megafon', en:'Loudspeaker', others:['loudspeeker', 'megaphone', 'megafon']},
+  {emoji:'🛤️', pl:'Tory Kolejowe', en:'Railway Track', others:['railwai track', 'train track', 'tory kolejowe']},
+  {emoji:'🎤', pl:'Mikrofon', en:'Microphone', others:['Mic', 'Stage Microphone', 'Mikrofon']},
+  {emoji:'🎧', pl:'Słuchawki', en:'Headphones', others:['Earphones', 'Audio Headset', 'Sluchawki']},
+     ],
+     hard:[
+  {emoji:'📻', pl:'Radio', en:'Radio', others:['FM Radio', 'Broadcast Receiver', 'Radio']},
+  {emoji:'⛳', pl:'Pole Golfowe', en:'Golf Course', others:['golf corse', 'golf field', 'pole golfowe', 'golf']},
   {emoji:'🎯', pl:'Tarcza', en:'Dartboard', others:['dart bord', 'target board', 'tarcza']},
   {emoji:'🏹', pl:'Łuk', en:'Bow', others:['boww', 'archery bow', 'luk']},
   {emoji:'🪃', pl:'Bumerang', en:'Boomerang', others:['bommerang', 'throwing stick', 'bumerang']},
   {emoji:'🪁', pl:'Latawiec', en:'Kite', others:['kight', 'flying kite', 'latawiec']},
-  {emoji:'🎣', pl:'Wędka', en:'Fishing Rod', others:['fishingrod', 'angler rod', 'wedka']},
-  {emoji:'🤿', pl:'Maska do Nurkowania', en:'Diving Mask', others:['divin mask', 'snorkel mask', 'okulary do pływania']},
-  {emoji:'🥋', pl:'Strój Karate', en:'Karate Uniform', others:['karatte uniform', 'martial arts gi', 'stroj karate']},
-  {emoji:'🥊', pl:'Rękawica Bokserska', en:'Boxing Glove', others:['boxin glove', 'boxing mitt', 'rekawica bokserska']},
+  {emoji:'🎣', pl:'Wędka', en:'Fishing Rod', others:['fishingrod', 'angler rod', 'wedka', 'fishing', 'rod']},
+  {emoji:'🤿', pl:'Maska do Nurkowania', en:'Diving Mask', others:['divin mask', 'snorkel mask', 'okulary do pływania', 'mask', 'diving']},
+  {emoji:'🥋', pl:'Strój Karate', en:'Karate Uniform', others:['karatte uniform', 'martial arts gi', 'stroj karate', 'karate', 'uniform']},
+  {emoji:'🥊', pl:'Rękawica Bokserska', en:'Boxing Glove', others:['boxin glove', 'boxing mitt', 'rekawica bokserska', 'box', 'boxing', 'glove']},
   {emoji:'🎱', pl:'Bilard', en:'Billiards', others:['bilards', 'pool ball', 'bilard']},
-  {emoji:'🎮', pl:'Pad', en:'Game Controller', others:['game controlller', 'gaming pad', 'pad']},
+  {emoji:'🎮', pl:'Pad', en:'Game Controller', others:['game controlller', 'gaming pad', 'pad', 'game pad', 'controller']},
   {emoji:'🔫', pl:'Pistolet na Wodę', en:'Water Gun', others:['watergn', 'squirt gun', 'pistolet na wode']},
   {emoji:'🎲', pl:'Kostka', en:'Dice', others:['dise', 'game dice', 'kostka']},
   {emoji:'🃏', pl:'Karta', en:'Card', others:['playin card', 'joker card', 'karta', 'Playing Card']},
   {emoji:'🪄', pl:'Różdżka', en:'Wand', others:['magic wond', 'Magic Wand', 'rozdzka']},
-  {emoji:'🎩', pl:'Cylinder', en:'Top Hat', others:['top hatt', 'gentleman hat', 'kapelusz']},
-  {emoji:'🖼️', pl:'Obraz', en:'Framed Picture', others:['frame picture', 'framed art', 'obraz', 'picture']},
+  {emoji:'🎩', pl:'Cylinder', en:'Top Hat', others:['top hatt', 'gentleman hat', 'kapelusz', 'hat']},
   {emoji:'🎨', pl:'Paleta', en:'Artist Palette', others:['art pallete', 'paint palette', 'paleta', 'palette']},
   {emoji:'🖌️', pl:'Pędzel', en:'Paintbrush', others:['paint brus', 'art brush', 'pedzel']},
   {emoji:'🖍️', pl:'Kredka', en:'Crayon', others:['crayon', 'wax crayon', 'kredkaa']},
@@ -145,24 +171,18 @@
   {emoji:'🧵', pl:'Nitka', en:'Thread', others:['thred', 'sewing thread', 'nitka']},
   {emoji:'🧶', pl:'Wełna', en:'Yarn', others:['yarnn', 'wool yarn', 'welna']},
   {emoji:'🪀', pl:'Jojo', en:'Yo-Yo', others:['yo yo', 'yo-yo toy', 'jojo', 'yoyo']},
-  {emoji:'🕹️', pl:'Dżojstik', en:'Joystick', others:['joy stik', 'game joystick', 'dzojstik']}
-     ],
-     medium:[
+  {emoji:'🕹️', pl:'Dżojstik', en:'Joystick', others:['joy stik', 'game joystick', 'dzojstik']},
   {emoji:'🎀', pl:'Kokarda', en:'Bow', others:['boow', 'ribbon bow', 'kokarda']},
   {emoji:'🎇', pl:'Fajerwerki', en:'Fireworks', others:['firewroks', 'sparklers', 'fajerwerki']},
   {emoji:'🧨', pl:'Dynamit', en:'Firecracker', others:['firecracer', 'dynamite', 'dynamit']},
   {emoji:'🎄', pl:'Choinka', en:'Christmas Tree', others:['christams tree', 'xmas tree', 'choinka']},
   {emoji:'🎗️', pl:'Wstążka', en:'Ribbon', others:['ribonn', 'awareness ribbon', 'wstazka']},
   {emoji:'🎖️', pl:'Odznaka', en:'Badge', others:['militry medal', 'badge of honor', 'odznaka']},
-  {emoji:'📢', pl:'Megafon', en:'Loudspeaker', others:['loudspeeker', 'megaphone', 'megafon']},
   {emoji:'🥅', pl:'Bramka', en:'Goal Net', others:['goalnet', 'soccer goal', 'bramka']},
   {emoji:'🛷', pl:'Sanki', en:'Sled', others:['sledd', 'snow sled', 'sanki']},
-  {emoji:'🛤️', pl:'Tory Kolejowe', en:'Railway Track', others:['railwai track', 'train track', 'tory kolejowe']},
   {emoji:'🛖', pl:'Schronisko Górskie', en:'Mountain Shelter', others:['huttt', 'mountain shelter', 'schronisko gorskie', 'hut']},
   {emoji:'🏈', pl:'Futbol Amerykański', en:'American Football', others:['americn football', 'football ball', 'futbol amerykanski']},
-  {emoji:'🏚️', pl:'Zrójnowany Budynek', en:'Derelict House', others:['derelic house', 'ruined building', 'zrojnowany budynek']}
-     ],
-     hard:[
+  {emoji:'🏚️', pl:'Zrójnowany Budynek', en:'Derelict House', others:['derelic house', 'ruined building', 'zrojnowany budynek', 'ruined house']},
   {emoji:'📷', pl:'Aparat', en:'Camera', others:['cammera', 'photo camera', 'aparat']},
   {emoji:'🏓', pl:'Tenis Stołowy', en:'Table Tennis', others:['table tenns', 'ping pong', 'tenis stolowy']},
   {emoji:'🎳', pl:'Kręgle', en:'Bowling', others:['bowlling', 'bowling game', 'kregle']},
